---
source: hugr-llvm/src/extension/logic.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {}, {} } @_hl.main.1({ i32, {}, {} } %0) {
alloca_block:
  %"0" = alloca { i32, {}, {} }, align 8
  %"2_0" = alloca { i32, {}, {} }, align 8
  %"4_0" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, {}, {} } %0, { i32, {}, {} }* %"2_0", align 4
  %"2_01" = load { i32, {}, {} }, { i32, {}, {} }* %"2_0", align 4
  %1 = extractvalue { i32, {}, {} } %"2_01", 0
  %2 = xor i32 %1, -1
  %3 = trunc i32 %2 to i1
  %4 = select i1 %3, { i32, {}, {} } { i32 1, {} poison, {} undef }, { i32, {}, {} } { i32 0, {} undef, {} poison }
  store { i32, {}, {} } %4, { i32, {}, {} }* %"4_0", align 4
  %"4_02" = load { i32, {}, {} }, { i32, {}, {} }* %"4_0", align 4
  store { i32, {}, {} } %"4_02", { i32, {}, {} }* %"0", align 4
  %"03" = load { i32, {}, {} }, { i32, {}, {} }* %"0", align 4
  ret { i32, {}, {} } %"03"
}
